# bender

./: .gitignore  Makefile  README.md  pyproject.toml
training-models/: README.md  _config.yml  data.py  dermamnist_v1_initial.py  dermamnist_v2_momentum0p9.py  dermamnist_v3_lr0p005_val_patience.py  dermamnist_v4_adam_TB.py  dermamnist_v5_deeper_network.py  dermamnist_v6_even_deeper_network.py  dermamnist_v7_with_augm.py  model.py  utils.py
training-models/shared/: __init__.py  data.py  model.py  utils.py
